--- a/_talks/2020-03-05-pccp.md
+++ b/_talks/2020-03-05-pccp.md
@@ -2,7 +2,7 @@
 title: "Convolutional Neural Networks for Gravitational Wave Detection"
 collection: posters
 type: "Poster"
-permalink: /posters/2020-03-05-pccp.md
+permalink: /posters/2020-03-05-pccp
 venue: "PCCP Workshop Series : Bayesian Deep Learning for Cosmology and Gravitational waves, Universite de Paris"
 date: 2020-03-05
 location: "Paris, France"
