--- a/_talks/2021-03-24-aei.md
+++ b/_talks/2021-03-24-aei.md
@@ -2,7 +2,7 @@
 title: "Incorporating machine learning into existing techniques for gravitational-wave inference: nested sampling with normalising flow"
 collection: talks
 type: "Invited talk"
-permalink: /talks/2021-03-24-aei.md
+permalink: /talks/2021-03-24-aei
 venue: "Max Planck Institute for Gravitational Physics, Albert Einstein Institute (remote)"
 date: 2021-03-24
 location: "Germany"
