--- a/_talks/2021-07-20-nam2021.md
+++ b/_talks/2021-07-20-nam2021.md
@@ -2,7 +2,7 @@
 title: "nessai: Improved nested sampling with normalising flows"
 collection: posters
 type: "Poster"
-permalink: /posters/2021-07-20-pccp.md
+permalink: /posters/2021-07-20-pccp
 venue: "National Astronomy Meeting 2021, University of Bath (remote)"
 date: 2021-07-20
 location: "UK"
