--- a/_talks/2021-04-23-why-ml.md
+++ b/_talks/2021-04-23-why-ml.md
@@ -2,7 +2,7 @@
 title: "Why is machine learning relevant to astronomers"
 collection: talks
 type: "Colloquium"
-permalink: /talks/2021-04-23-why-ml.md
+permalink: /talks/2021-04-23-why-ml
 venue: "Department of Physics, CSU Fullerton (remote)"
 date: 2021-04-23
 location: "California, US "
