--- a/_talks/2022-07-11-nam2022.md
+++ b/_talks/2022-07-11-nam2022.md
@@ -2,7 +2,7 @@
 title: "Importance nested sampling with nessai for gravitational-wave inference"
 collection: talks
 type: "Talk"
-permalink: /talks/2022-07-11-nam2022.md
+permalink: /talks/2022-07-11-nam2022
 venue: "National Astronomy Meeting 2022, University of Warwick"
 date: 2022-07-11
 location: "UK"
