--- a/_talks/2023-07-05-maxent.md
+++ b/_talks/2023-07-05-maxent.md
@@ -2,7 +2,7 @@
 title: "Importance nested sampling with normalizing flows"
 collection: talks
 type: "Invited talk"
-permalink: /talks/2023-07-05-maxent.md
+permalink: /talks/2023-07-05-maxent
 venue: "42nd International Workshop on Bayesian Inference and Maximum Entropy Methods in Science and Engineering, Max-Planck-Institut für Plasmaphysik"
 date: 2023-07-05
 location: "Garching, Germany"
