--- a/_talks/2022-04-04-britgrav22.md
+++ b/_talks/2022-04-04-britgrav22.md
@@ -1,7 +1,7 @@
 ---
 title: "Importance nested sampling with nessai"
 collection: talks
-type: "Talk"
+type: "Contributed talk"
 permalink: /talks/2022-04-04-britgrav22
 venue: "BritGrav22, University of Glasgow (remote)"
 date: 2022-04-04
